--- a/Backend/ducut/src/main/resources/application.properties
+++ b/Backend/ducut/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 server.port=8080
 
 # MySQL Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/petdb
+spring.datasource.url=jdbc:mysql://localhost:3306/db_pet
 spring.datasource.username=petuser
 spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
